# tanstack-bun-wasm-starter

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  app.config.ts  biome.json  bun.lockb  package.json  rust-toolchain.toml  tsconfig.json  wasm-build.ts
.github/workflows/: main.yml
acrate/: Cargo.toml
acrate/.cargo/: config.toml
acrate/src/: lib.rs
acrate/tests/: web.rs
app/: router.tsx  ssr.tsx
app/components/: DefaultCatchBoundary.tsx  NotFound.tsx
app/hooks/: useWasm.ts
app/routes/: __root.tsx  index.tsx
public/: robots.txt  sitemap.xml
test/: helpers.tsx  matchers.d.ts
test/components/: NotFound.test.tsx
